# app/Models/Anggaran.php
@@ -5,21 +5,23 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 
-<<<<<<< HEAD
 /**
  * @OA\Schema(
  *     schema="Anggaran",
  *     type="object",
- *     required={"jumlah_anggaran", "periode"},
- *     @OA\Property(property="user_id", type="integer", example=1),
- *     @OA\Property(property="kategori_id", type="integer", example=2),
- *     @OA\Property(property="jumlah_anggaran", type="integer", example=5000000),
- *     @OA\Property(property="periode", type="string", example="2025-05")
+ *     title="Anggaran",
+ *     required={"user_id", "kategori_id", "jumlah_anggaran", "periode"},
+ *     @OA\Property(property="id", type="integer", example=1),
+ *     @OA\Property(property="user_id", type="integer", example=2),
+ *     @OA\Property(property="kategori_id", type="integer", example=3),
+ *     @OA\Property(property="jumlah_anggaran", type="integer", example=1000000),
+ *     @OA\Property(property="periode", type="string", example="2025-01"),
+ *     @OA\Property(property="created_at", type="string", format="date-time", example="2025-05-19T08:30:00Z"),
+ *     @OA\Property(property="updated_at", type="string", format="date-time", example="2025-05-19T08:30:00Z")
  * )
  */
 
-=======
->>>>>>> 5b55bab2baf76c506d967b580422ecafa36cbfc0
+
 class Anggaran extends Model
 {
     use HasFactory;
